add less files use less index to import all less files

--- a/index.html
+++ b/index.html
@@ -6,9 +6,20 @@
     <script defer="defer" src="./script/index.js"></script>
   </head>
   <body>
-    <header>
-    </header>
-    <footer>
-    </footer>
-  </body>
+    <div class="home home-container container">
+      <header>
+        <h2>UseMyTools</h2>
+        <nav>
+          <a href="#">About Us<span>^</span></a>
+          <a href='#'>Login/Signup</a>
+        </nav>
+      </header>
+
+      <div class="main-content">
+      </div>
+
+      <footer>
+      </footer>
+    </body>
+  </div>
 </html>
