add html structure to home page and about page

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
   </head>
 
   <body>
-    <div class="home home-container container">
+    <div class="about about-container container">
       <header>
       </header>
 
