--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
      <script src="https://use.fontawesome.com/release/v5.0.8/js/all.js"></script> 
 -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
+
     <!-- Local styles and scripts -->
 <!--    <script defer="defer" src="./components"></script> -->
     <script defer="defer" src="./script/index.js"></script>
@@ -24,7 +27,7 @@
     <div class="nav-bar">
       <h1>UseMyTools</h1>
       <nav>
-        <a href="">About <span>^</span></a>      
+        <a href="">About</a>      
         <a href="">Login / Signup</a>      
       </nav>
     </div>
@@ -57,11 +60,11 @@
 
       <footer>
         <ul>
-          <li>twitter</li>
-          <li>facebook</li>
-          <li>instagram</li>
-          <li>linkedin</li>
-          <li>pintrest</li>
+          <li><a href=""><i class="fab fa-twitter"></i></a></li>
+          <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+          <li><a href=""><i class="fab fa-instagram"></i></a></li>
+          <li><a href=""><i class="fab fa-linkedin"></i></a></li>
+          <li><a href=""><i class="fab fa-pinterest"></i></a></li>
         </ul>
         <div class="copyright">
           <p>&copy;2019 UseMyTools,Inc.</p>
