added index.php for purposes of deployment to heroku

--- a/about.html
+++ b/about.html
@@ -22,6 +22,13 @@
   </head>
 
   <body>
+    <div class="nav-bar">
+      <h1>UseMyTools</h1>
+      <nav>
+        <a href="index.html">Home</a>      
+        <a href="">Login/Signup</a>      
+      </nav>
+    </div>
     <div class="about about-container container">
       <header>
       </header>
