--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <div class="nav-bar">
       <h1>UseMyTools</h1>
       <nav>
-        <a href="">About</a>      
-        <a href="">Login / Signup</a>      
+        <a href="about.html">About</a>      
+        <a href="">Login/Signup</a>      
       </nav>
     </div>
     <div class="home home-container container">
