renamed index.html, add nav footer and banner to about

--- a/about.html
+++ b/about.html
@@ -35,9 +35,33 @@
 
      
       <div class="main-content">
+        <div class="developer  developer-banner">
+         <div class="banner-developer-text">
+           <h2></h2>
+           <h3></h3>
+           <p></p>
+           <ul>
+             <li><a href=""><i class="fab fa-twitter"></i></a></li>
+             <li><a href=""><i class="fab fa-linkedin"></i></a></li>
+           </ul>
+         </div>
+         <div class="banner-developer-image">
+           <img src="" alt="">
+         </div>
+       </div>
       </div>
 
       <footer>
+        <ul>
+          <li><a href=""><i class="fab fa-twitter"></i></a></li>
+          <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+          <li><a href=""><i class="fab fa-instagram"></i></a></li>
+          <li><a href=""><i class="fab fa-linkedin"></i></a></li>
+          <li><a href=""><i class="fab fa-pinterest"></i></a></li>
+        </ul>
+        <div class="copyright">
+          <p>&copy;2019 UseMyTools,Inc.</p>
+        </div>
       </footer>
     </body>
   </div>
