about page made with some placeholder content

--- a/home.html
+++ b/home.html
@@ -27,8 +27,8 @@
     <div class="nav-bar">
       <h1>UseMyTools</h1>
       <nav>
-        <a href="about.html">About</a>      
-        <a href="">Login/Signup</a>      
+        <a class="button" href="about.html">About</a>      
+        <a class="button" href="http://usemytools-frontend.netlify.com/">Login/Signup</a>      
       </nav>
     </div>
     <div class="home home-container container">
@@ -40,7 +40,7 @@
         </div>
         <div class="header-right">
           <h2>Borrow and lend tools, save time and money</h2>
-          <button type="button">Visit App</button>
+          <a class="button" href="http://usemytools-frontend.netlify.com/">Visit App</a>
         </div>
       </header>
 
@@ -57,24 +57,24 @@
           <!-- Wrapper for slides -->
           <div class="carousel-inner">
             <div class="item active">
-              <img src="assets/images/types.jpg" alt="woodworker using hand plane">
+              <img class="carousel-img" src="assets/images/types.jpg" alt="woodworker using hand plane">
               <div class="carousel-caption">
                 <h2>Any TYPE of tool</h2>
               </div>
             </div>
 
             <div class="item">
-              <img src="assets/images/sizes.jpg" alt="woodworker using hand plane">
+              <img class="carousel-img" src="assets/images/sizes.jpg" alt="woodworker using hand plane">
               <div class="carousel-caption">
                 <h2>Any SIZE of tool</h2>
               </div>
             </div>
 
             <div class="item">
-              <img src="assets/images/findit.jpg" alt="woodworker using hand plane">
-              <div class="carousel-caption">
+              <img class="carousel-img" src="assets/images/findit.jpg" alt="woodworker using hand plane">
+              <div class="carousel-caption" id="search-for-it">
                 <h2>Search for it on UseMyTools</h2>
-                <button type="button">Get Started</button>
+                <a class="button" href="http://usemytools-frontend.netlify.com/">Get Started</a>
               </div>
             </div>
           </div>
@@ -94,7 +94,7 @@
          <div class="bottom-banner-left">
            <h2>Join Now</h2>
            <p>Join other hobbyists and professionals lending and borrowing the tools you need now</p>
-           <button type="button">Visit App</button>
+           <a class="button" href="http://usemytools-frontend.netlify.com/">Visit App</a>
          </div>
          <div class="bottom-banner-right">
            <img src="assets/images/wrenches.jpg" alt="organized layed out wrenches">
