--- a/home.html
+++ b/home.html
@@ -33,10 +33,10 @@
     </div>
     <div class="home home-container container">
 
-      <header>
+      <header class="home-header">
         <div class="header-left">
-          <img src="assets/images/phone.png" alt="screenshot of app sample">
-          <img src="assets/images/phone.png" alt="screenshot of app sample">
+          <img src="images/phone.png" alt="screenshot of app sample">
+          <img src="images/phone.png" alt="screenshot of app sample">
         </div>
         <div class="header-right">
           <h2>Borrow and lend tools, save time and money</h2>
@@ -57,21 +57,21 @@
           <!-- Wrapper for slides -->
           <div class="carousel-inner">
             <div class="item active">
-              <img class="carousel-img" src="assets/images/types.jpg" alt="woodworker using hand plane">
+              <img class="carousel-img" src="images/types.jpg" alt="woodworker using hand plane">
               <div class="carousel-caption">
                 <h2>Any TYPE of tool</h2>
               </div>
             </div>
 
             <div class="item">
-              <img class="carousel-img" src="assets/images/sizes.jpg" alt="woodworker using hand plane">
+              <img class="carousel-img" src="images/sizes.jpg" alt="different sized ratchets laid out">
               <div class="carousel-caption">
                 <h2>Any SIZE of tool</h2>
               </div>
             </div>
 
             <div class="item">
-              <img class="carousel-img" src="assets/images/findit.jpg" alt="woodworker using hand plane">
+              <img class="carousel-img" src="images/findit.jpg" alt="sparks coming off of an angle grinder being used">
               <div class="carousel-caption" id="search-for-it">
                 <h2>Search for it on UseMyTools</h2>
                 <a class="button" href="http://usemytools-frontend.netlify.com/">Get Started</a>
@@ -97,7 +97,7 @@
            <a class="button" href="http://usemytools-frontend.netlify.com/">Visit App</a>
          </div>
          <div class="bottom-banner-right">
-           <img src="assets/images/wrenches.jpg" alt="organized layed out wrenches">
+           <img src="images/wrenches.jpg" alt="organized layed out wrenches">
          </div>
        </div>
       </div>
