navigation and header are now responsive for tablets and mobile on both pages

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
         <a href="http://usemytools-frontend.netlify.com/">Login/Signup</a>      
       </nav>
     </div>
-    <div class="about about-container container">
+    <div class="about about-container">
     <header class="about-header">
       <div class="header-left about-header-left">
         <img src="images/lambda.png" alt="lambda school logo">
