--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
         <a class="button" href="http://usemytools-frontend.netlify.com/">Login/Signup</a>      
       </nav>
     </div>
-    <div class="home home-container container">
+    <div class="home home-container">
 
       <header class="home-header">
         <div class="header-left">
@@ -96,9 +96,7 @@
            <p>Join other hobbyists and professionals lending and borrowing the tools you need now</p>
            <a class="button" href="http://usemytools-frontend.netlify.com/">Visit App</a>
          </div>
-         <div class="bottom-banner-right">
-           <img src="images/wrenches.jpg" alt="organized layed out wrenches">
-         </div>
+         <img src="images/wrenches.jpg" alt="organized layed out wrenches">
        </div>
       </div>
 
