--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 
     <!-- Meta tags -->
     <meta charset="utf-8">
-    <metai name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     
     <!-- Bootstrap Dependencies -->   
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
