Added content to team's about page

--- a/about.html
+++ b/about.html
@@ -52,11 +52,11 @@
             <p>Promoted team communication and collaboration, as well as establishing everyone was caught up to the daily milestones. If a developer was in a situation where they were blocked or stuck on a problem I would help resolve the issue.</p>
            </div>
            <ul>
-             <li><a href=""><i class="fab fa-twitter fa-2x"></i></a></li>
+             <li><a href="https://www.twitter.com/DrewJoh29996945"><i class="fab fa-twitter fa-2x"></i></a></li>
              <li><a href="https://www.linkedin.com/in/drew-johnson-99ab34171/"><i class="fab fa-linkedin fa-2x"></i></a></li>
            </ul>
          </div>
-         <img src="images/placeholder.jpg">
+         <img src="images/drew.jpeg">
        </div>
        <div class="developer-banner">
          <div class="banner-developer-text">
@@ -80,7 +80,7 @@
             <p>Cronut poutine humblebrag swag coloring book, cloud bread adaptogen. Pitchfork brooklyn salvia cronut viral, celiac edison bulb before they sold out tofu 3 wolf moon sartorial whatever. VHS DIY etsy, iPhone tumeric disrupt flannel letterpress knausgaard. Trust fund pickled retro small batch tofu. Typewriter selvage cray wayfarers, keytar farm-to-table bespoke fixie skateboard snackwave. Lumbersexual roof party hoodie try-hard live-edge palo santo gastropub adaptogen williamsburg gentrify.</p>
            </div>
            <ul>
-             <li><a href=""><i class="fab fa-twitter fa-2x"></i></a></li>
+             <li><a href="https://www.twitter.com/estraxofficial"><i class="fab fa-twitter fa-2x"></i></a></li>
              <li><a href="https://www.linkedin.com/in/estrax/"><i class="fab fa-linkedin fa-2x"></i></a></li>
            </ul>
          </div>
