all styling and structure done. All content done except screenshots on homepage

--- a/home.html
+++ b/home.html
@@ -21,6 +21,7 @@
 <!--    <script defer="defer" src="./components"></script> -->
     <script defer="defer" src="./script/index.js"></script>
     <link rel="stylesheet" href="./css/index.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">    
   </head>
 
   <body>
@@ -96,7 +97,7 @@
            <p>Join other hobbyists and professionals lending and borrowing the tools you need now</p>
            <a class="button" href="http://usemytools-frontend.netlify.com/">Visit App</a>
          </div>
-         <img src="images/wrenches.jpg" alt="organized layed out wrenches">
+         <img class="bottom-banner-img" src="images/wrenches.jpg" alt="organized layed out wrenches">
        </div>
       </div>
 
