--- a/home.html
+++ b/home.html
@@ -15,13 +15,11 @@
     
     <!-- Custom Fonts (logos in footer) -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">    
 
 
     <!-- Local styles and scripts -->
-<!--    <script defer="defer" src="./components"></script> -->
-    <script defer="defer" src="./script/index.js"></script>
     <link rel="stylesheet" href="./css/index.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">    
   </head>
 
   <body>
@@ -36,8 +34,7 @@
 
       <header class="home-header">
         <div class="header-left">
-          <img src="images/phone.png" alt="screenshot of app sample">
-          <img src="images/phone.png" alt="screenshot of app sample">
+          <img src="images/header.jpeg" alt="screenshot of app sample">
         </div>
         <div class="header-right">
           <h2>Borrow and lend tools, save time and money</h2>
