change photos for header on homepage

--- a/home.html
+++ b/home.html
@@ -34,7 +34,8 @@
 
       <header class="home-header">
         <div class="header-left">
-          <img src="images/header.jpeg" alt="screenshot of app sample">
+          <img src="images/header.jpeg" alt="man welding on car">
+          <img src="images/header2.jpeg" alt="gloved hands driving screw into board on sawhorse">
         </div>
         <div class="header-right">
           <h2>Borrow and lend tools, save time and money</h2>
